Fixed content selection layout issue

--- a/resources/styles/admin-extension.scss
+++ b/resources/styles/admin-extension.scss
@@ -399,11 +399,7 @@
 }
 
 .sttr-order-item-details .translatable-content-table{
-  margin: 15px 0;
-}
-
-.sttr-order-item-details .translatable-content-table thead th{
-  text-align: left;
+  margin: 0 0 15px 0;
 }
 
 .sttr-order-item-details h3 {
